syntax = "proto3";

option csharp_namespace = "Luxelot.Messages";

message ConsoleAlert {
    string message = 1;
}